--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -38,7 +38,7 @@
 
 		<header>
 			<a href="/">
-				<img src="file:///media/fuse/crostini_0829523e57af0d8d37005c040b5ed399ea4a2b92_termina_penguin/file.jpg" alt="Site Logo" style="height: 50px;">
+				<img src="https://i.pinimg.com/originals/26/b5/c9/26b5c97560749daa24da66d11e82aecd.jpg" alt="Site Logo" style="height: 90px; width: 105px;">
 			</a>
 			<a href="/" class="home-link">{{ metadata.title }}</a>
 
